--- a/算法/排序算法.md
+++ b/算法/排序算法.md
@@ -247,7 +247,7 @@ public class HeapSort{
         return array;
     }
     private void adjustMaxHeap(int[] array){
-        for(int i=0;i<(array.length/2-1);i++)  //从第一个非叶子节点开始调整
+        for(int i=(array.length/2-1);i>=0;i--)  //从第一个非叶子节点开始调整
             adjustHeap(array,i);
     }
     private void adjustHeap(int[] array,int root){
